# sdlc-terminal

./: .env.example  .eslintrc.js  .gitignore  Dockerfile  Freddie_Mac_SDLC_DevOps_Setup_Guide.docx  Jenkinsfile  PROJECT_DOCUMENTATION.md  README.md  bandit_report.json  difference  installiatin guide  nexus.spec  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-validation.yml
Nexus terminal guide/: INSTALLATION_GUIDE.md  agile_mode_docs.md  implementation_plan.md  manager_presentation.md  nexus_10_page_report.md  nexus_architecture.md  nexus_configuration_guide.docx  nexus_presentation_guide.md  sast scan.docx  vscode_extension_guide.md  walkthrough.md
Nexus terminal guide/Confluence Project Plan/: Ai Sdlc Terminal Project Plan Confluence Template.docx  ai_sdlc_terminal_project_plan_confluence_template.md
Skills/: README.md  coding_standards_kb.md  software_development_practices_kb.md
Skills/devops/: cicd_pipeline.md  deployment_checklist.md
config/: base.json
nexus_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
repo/app/: README.md  app.ts  (+3 more)
scratch/: test_agile_parser.py  test_incremental.py  test_server_import.py  test_terminal_regression.py
src/: index.ts  main.py
terraform/: main.tf
tickets/: AUTH-101.json  AUTH-102.json  AUTH-103.json  OPS-301.json  SEC-401.json  USER-201.json  USER-202.json
vscode-extension/: .gitignore  .vscodeignore  LICENSE  nexus-sdlc-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
(+101 files in other folders)
